get logged user data endpoint
