# internal/http/v1/pastes.go
@@ -29,7 +29,7 @@ import (
 // @Param        pageSize  query    int     false  "Number of items per page"
 // @Success      200  {object}  service.ListPastesOutput  "Successfully retrieved paste"
 // @Failure      422  {object}  ErrorResponse "Unprocessing data"
-// @Failure 429 {object} ErrorResponse "Too many requests, rate limit exceeded"
+// @Failure      429 {object} ErrorResponse "Too many requests, rate limit exceeded"
 // @Failure      500  {object}  ErrorResponse "Internal server error"
 // @Router       /api/v1/pastes/ [get]
 func (h *Handler) ListPastesHandler(w http.ResponseWriter, r *http.Request) {
@@ -112,7 +112,7 @@ func (h *Handler) GetPasteHandler(w http.ResponseWriter, r *http.Request) {
 // @Success      204  "Successfully deleted paste"
 // @Failure      403  {object}  ErrorResponse "User is not allowed to edit this paste"
 // @Failure      404  {object} ErrorResponse "Paste not found"
-// @Failure 429 {object} ErrorResponse "Too many requests, rate limit exceeded"
+// @Failure      429 {object} ErrorResponse "Too many requests, rate limit exceeded"
 // @Failure      500  {object} ErrorResponse "Internal server error"
 // @Router       /api/v1/pastes/{id} [delete]
 func (h *Handler) DeletePasteHandler(w http.ResponseWriter, r *http.Request) {
@@ -148,10 +148,10 @@ func (h *Handler) DeletePasteHandler(w http.ResponseWriter, r *http.Request) {
 // @Param        body  body     service.CreatePasteInput  true  "Paste creation input"
 // @Security BearerAuth
 // @Success      201  {object}  service.PasteResp  "Successfully created paste"
-// @Header 201 {string} Location "URL of the newly created paste"
+// @Header       201 {string} Location "URL of the newly created paste"
 // @Failure      400  {object}  ErrorResponse "Bad request"
 // @Failure      422  {object}  ErrorResponse "Unprocessable data"
-// @Failure 429 {object} ErrorResponse "Too many requests, rate limit exceeded"
+// @Failure      429 {object} ErrorResponse "Too many requests, rate limit exceeded"
 // @Failure      500  {object}  ErrorResponse "Internal server error"
 // @Router       /api/v1/pastes/ [post]
 func (h *Handler) CreatePasteHandler(w http.ResponseWriter, r *http.Request) {
@@ -211,7 +211,7 @@ func (h *Handler) CreatePasteHandler(w http.ResponseWriter, r *http.Request) {
 // @Failure      404  {object}  ErrorResponse "Not found"
 // @Failure      409  {object}  ErrorResponse "Conflict"
 // @Failure      422  {object}  ErrorResponse "Unprocessable data"
-// @Failure 429 {object} ErrorResponse "Too many requests, rate limit exceeded"
+// @Failure      429 {object} ErrorResponse "Too many requests, rate limit exceeded"
 // @Failure      500  {object}  ErrorResponse "Internal server error"
 // @Router       /api/v1/pastes/{id} [patch]
 func (h *Handler) UpdatePasteHandler(w http.ResponseWriter, r *http.Request) {
